Fix SSRF vulnerability (#399)